--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -2,38 +2,9 @@ include ../includes/mixins.pug
 block variable
 
 - 
-	var fb = 'https://facebook.com';
-	var insta = 'https://instagram.com';
-	var viber = 'https://viber.com';
-	var complexTel = '(067) 747-01-51';
-	var complexAdress = 'Киев, ул. Ж.Жабаєва,5';
 
-	var menu = [
-		[
-			['Философия проекта ','philosophy.html'],
-			['Удобства ','facilities.html'],
-			['Документы ','documents.html'],
-			['Галерея ','gallery.html'],
-			['Фильм о проекте ','video-about.html'],
-			['Расположение ','location.html'],
-			['Инфраструктура ','infrastructure.html'],
-			['Новости ','news.html'],
-			['Ход строительства ','build-progress.html'],
-			['Застройщик','developer.html'],
-			['Контакты','contacts.html'],
-
-		],
-		[
-			['Квартиры','3d.html'],
-			['Коммерческая недвижимость','commercial.html'],
-			['Подбор по параметрам','3d.html'],
-		],
-		[
-			['Т: (067) 747-0151 ','tel:0677470151'],
-			['Е: blabla@gmail.com ','mailto:blabla@gmail.com'],
-			['А: Киев, ул. Чудесная, 56','https://maps.google.com/?q=Киев, ул. Чудесная, 56'],
-		]
-		];
+	var complexTel = '044-338-27-27';
+	var complexAdress = ' Київ, вул.Глибочицька 73';
 doctype html
 html(lang="uk")
 	head
