--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -71,6 +71,7 @@
                 width: 100%;
                 height: 100%;
                 object-fit: cover;
+                object-position: bottom;
             }
         }
         &>*:not(.main-screen__bg) {
@@ -198,6 +199,7 @@
         display: flex;
         align-items: center;
         color: var(--blue);
+        text-decoration: none;
         &__icon {
             background-color: var(--gold);
             border-radius: 50%;
@@ -281,6 +283,12 @@
             &__right-column {
                 width: 100%;
             }
+            &__golden-circle {
+                position: relative;
+                width: 80%;
+                padding-bottom: 80%;
+                margin: 30px auto;
+            }
         }
     }
     
@@ -314,6 +322,7 @@
             margin-top: calc((200px + 100px) * -1);
             margin-left: calc(var(--side-fields) * -1);
             margin-right: calc(var(--side-fields) * -1);
+            margin-bottom: -6px;
         }
         @include to(950px) {
             padding-top: 50px;
@@ -990,6 +999,9 @@
         }
         .icon-with-label {
             margin-top: 20px;
+        }
+        .icon-with-label__text {
+            width: 20ch;
         }
         .icon-with-label.text-l {
             margin-top: 30px;
