--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -21,7 +21,7 @@ block content
 				.icon-with-label__icon
 					+svg('metro')
 				.icon-with-label__text Контрактова площа
-			.icon-with-label
+			a(target='_blank' href="https://maps.google.com/?q="+complexAdress).icon-with-label
 				.icon-with-label__icon
 					+svg('marker')
 				.icon-with-label__text м. Київ, Глибочицька 73
@@ -31,7 +31,7 @@ block content
 				.icon-with-label__text пн-пт: 09:00-19:00 сб-вс: 10:00-17:00
 		.main-screen__title-wrap
 			.main-screen__title Багатофункціональний житловий комплекс бізнес класу
-			.main-screen__but Дізнатися більше
+			.main-screen__but.js-form-call Дізнатися більше
 		.main-screen__section-info-wrap
 			.section-info 
 				.section-info__top
@@ -59,9 +59,9 @@ block content
 				img(src="./assets/images/index/golde-circle.png").about-block__golden-circle-img
 				.about-block__golden-circle-text <span class="text">Назва комплексу — </span><span class="text gold">не просто гарне поєднання слів.</span>
 			.subtitle Це відображення особливого статусу та способу життя.
-	section.about-block-bg
+	section.about-block-bg#about
 		img(src="./assets/images/index/about-block-bg.jpg")
-	section.panorama
+	section.panorama#panorama
 		.panorama__text-content
 			.title Панорама
 			.subtitle З вікон житлового комплексу «PODIL PLAZA & RESIDENCE–2» відкриваються приголомшливі панорамні види на старовинний Поділ.
@@ -69,7 +69,7 @@ block content
 		.panorama-help-popup.js-panorama-help-popup
 			span.panorama-help-popup__text Андріївська церква
 		include ../includes/panorama.pug
-	section.podil-about
+	section.podil-about#posil-about
 		img(src="./assets/images/index/podil-about-decor.png").podil-about__decor
 		.podil-about__content
 			.title «PODIL PLAZA & RESIDENCE - 2» - це новий настрій класичного Подолу.
@@ -79,7 +79,7 @@ block content
 				.text За кількістю історико-архітектурних пам’яток сучасний Поділ впевнено займає лідируючу позицію серед інших столичних районів.
 				.subtitle Незважаючи на появу нових сучасних об’єктів, Поділ зберіг свою чарівність та самобутність.
 		img(src="./assets/images/index/podil-about-bg.jpg").podil-about__bg
-	section.philosophy-double-section
+	section.philosophy-double-section#advantages
 		picture.philosophy-double-section__img
 			img(src="./assets/images/index/advantages1.jpg")
 		.philosophy-double-section__text.home-screen-description-block
@@ -192,7 +192,7 @@ block content
 		.flats__text
 			.subtitle Просторі кімнати з панорамними вікнами чудово підходять для прийому гостей. 
 			.text Квартири в «PODIL PLAZA & RESIDENCE–2» — це ідеальне простір для створення розкішного інтер’єру вашої мрії. Ретельно продумані планувальні рішення квартир відповідають найвищим вимогам до житла класу Преміум.
-	section.plans
+	section.plans#plans
 		.icon-with-label.js-plans-prev.plans__prev
 			.icon-with-label__icon
 				+svg('birdy')
@@ -279,7 +279,7 @@ block content
 					span.plan-card__text-title Житлова площа: 
 					span.plan-card__text-value  19,25 м<sup>2</sup>
 				.button-std PDF
-	section.developer
+	section.developer#developer
 		.title Забудовник
 		.subtitle STATUS GROUP — стабільна і перспективна компанія, яка працює з 2005 року і представляє нове покоління в будівельному бізнесі, де стиль роботи базується на інноваційних рішеннях, величезному практичному досвіді і прагненні до досконалості.
 		.golden-circle
@@ -338,25 +338,25 @@ block content
 					.objects__table-item-point
 						+svg('marker').objects__table-item-point-icon
 						.objects__table-item-point-text вул. Центральна 19
-	section.contacts
+	section.contacts#contacts
 		.title Контакти
 		.contacts__left
 			.contacts__subtitle Розташування
-			.icon-with-label.text-l
+			a(target='_blank' href="https://maps.google.com/?q="+complexAdress).icon-with-label.text-l
 				.icon-with-label__icon
 					<svg width="10" height="13" viewBox="0 0 10 13" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path fill-rule="evenodd" clip-rule="evenodd" d="M5 4.24615C4.21429 4.24615 3.57143 4.89093 3.57143 5.67899C3.57143 6.46705 4.21429 7.11182 5 7.11182C5.37888 7.11182 5.74224 6.96086 6.01015 6.69216C6.27806 6.42345 6.42857 6.059 6.42857 5.67899C6.42857 5.29898 6.27806 4.93453 6.01015 4.66582C5.74224 4.39711 5.37888 4.24615 5 4.24615ZM5 0.664062C7.33571 0.664062 10 2.42645 10 5.78645C10 7.92138 8.47857 10.1709 5.43571 12.5136C5.17857 12.7142 4.82143 12.7142 4.56429 12.5136C1.52143 10.1638 0 7.92138 0 5.78645C0 2.42645 2.66429 0.664062 5 0.664062Z" fill="#E8E6DF"/>
 					</svg>
-				.icon-with-label__text м. Київ, Глибочицька 73
+				.icon-with-label__text #{complexAdress}
 			a.button-std(href="#") Показати на Google Maps
 			.contacts__remark * Перегляд об’єкту (для покупців) триває щоденно за попередньою згодою з відділом продажів
 			.contacts__subtitle Відділ продажів
-			.icon-with-label.text-l
+			a(href="tel:"+complexTel).icon-with-label.text-l
 				.icon-with-label__icon
 					<svg width="15" height="15" viewBox="0 0 15 15" fill="none" xmlns="http://www.w3.org/2000/svg">
 					<path d="M6.23507 8.83959C7.15452 9.72856 8.26704 10.4149 9.49447 10.8504L11.155 9.59102C11.2042 9.55871 11.2626 9.54141 11.3224 9.54141C11.3822 9.54141 11.4405 9.55871 11.4898 9.59102L14.573 11.4843C14.69 11.5514 14.7891 11.6434 14.8624 11.7533C14.9357 11.8631 14.9812 11.9877 14.9953 12.1172C15.0094 12.2466 14.9917 12.3775 14.9436 12.4993C14.8956 12.6212 14.8184 12.7307 14.7183 12.8192L13.2736 14.1793C13.0667 14.3742 12.8124 14.5172 12.5335 14.5955C12.2545 14.6739 11.9595 14.6853 11.6748 14.6285C8.83476 14.0695 6.21707 12.7602 4.12085 10.8504C2.07116 8.92156 0.652789 6.46728 0.0377852 3.7853C-0.0229692 3.51816 -0.0102889 3.24059 0.0745972 2.97949C0.159483 2.7184 0.313697 2.48263 0.522292 2.29503L2.01986 0.918116C2.11253 0.827351 2.22555 0.757745 2.35044 0.714507C2.47534 0.67127 2.60888 0.655522 2.74107 0.668444C2.87326 0.681366 3.00067 0.722621 3.11376 0.789122C3.22685 0.855623 3.32268 0.945646 3.3941 1.05245L5.44664 3.95321C5.48204 3.99876 5.50115 4.05395 5.50115 4.11063C5.50115 4.16732 5.48204 4.22251 5.44664 4.26806L4.09443 5.81709C4.56377 6.96352 5.295 7.99599 6.23507 8.83959Z" fill="#E8E6DF"/>
 					</svg>	
-				.icon-with-label__text 044 338 27 27
+				.icon-with-label__text #{complexTel}
 			.icon-with-label
 				.icon-with-label__icon
 					<svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
