--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -16,321 +16,12 @@
 }
 
 .footer {
-    background-color: var(--other-gray);
-    --gap: 40px;
-    li {
-        list-style: none;
-    }
-    &__main {
-        display: flex;
-        flex-wrap: wrap;
-        padding-top: 75px;
-        padding-bottom: 54px;
-        padding-left: var(--side-fields);
-        padding-right: var(--side-fields);
-        position: relative;
-        background: var(--other-gray);
-    }
-    &__main-left {
-        display: flex;
-        flex-direction: column;
-        @include size(4);
-        position: relative;
-        @include shift-padding-left(1);
-    }
-    &__main-right {
-        display: flex;
-        flex-wrap: wrap;
-        @include size(8);
-        @include shift-padding(0.8);
-    }
-    &__main-left:after {
-        content: '';
-        position: absolute;
-        right: 0;
-        top: 0%;
-        height: 100%;
-        width: 1px;
-        background-color: var(--gray);
-    }
-    &__social-group {
-        width: 100%;
-        text-align: right;
-        display: flex;
-        justify-content: flex-end;
-        .social-link {
-            margin-left: 26px;
-        }
-    }
-    &__contact-row {
-        display: flex;
-        align-items: center;
-        flex-wrap: wrap;
-        line-height: calc(2.29em + 3px);
-        &-value[href*='tel'] {
-            font-size: 18px;
-        }
-        &-value {
-            text-decoration: none;
-            color: var(--black);
-        }
-        &-title {
-            color: var(--orange);
-        }
-    }
-    &__column-title {
-        width: 100%;
-        @include fontSizeLhToEm(16, 24);
-        margin-bottom: 7px;
-        color: var(--black);
-    }
-    &__link {
-        @include fontSizeLhToEm(12, 25);
-        color: var(--very-gray);
-        text-decoration: none;
-    }
-    .double-column {
-        column-count: 2;
-        break-inside: avoid;
-        column-gap: var(--gap);
-    }
-    &__links-group {
-        @include size(3);
-        &_double {
-            @include size(6);
-        }
-    }
-    &__links-group:not(:first-child) {
-        margin-left: calc(var(--gap) / 2);
-    }
-    &__logo {
-        --logo-ratio: 0.23;
-        --logo-width: 191px;
-        width: var(--logo-width);
-        height: calc(var(--logo-width) * var(--logo-ratio));
-        margin-bottom: 110px;
-    }
-    @include to(1200px) {
-        &__main-right {
-            @include shift-padding-right(0);
-        }
-    }
-    @include to(950px) {
-        --gap: 20px;
-        &__main-right {
-            @include shift-padding-left(0.5);
-        }
-        &__main-left {
-            @include shift-padding-left(0);
-            @include shift-padding-right(1);
-        }
-        &__links-group {
-            width: 50%;
-        }
-        &__links-group_double {
-            width: 100%;
-            margin-bottom: var(--gap);
-        }
-        &__links-group:not(:first-child) {
-            margin-left: 0;
-            padding-left: calc(var(--gap) / 2);
-        }
-        &__links-group:nth-child(2) {
-            padding-left: 0;
-        }
-    }
-    @include to(768px) {
-        &__main {
-            padding-top: calc(var(--gap) * 2);
-            padding-bottom: calc(var(--gap) * 2);
-        }
-        &__main-right {
-            width: 100%;
-            padding-left: 0;
-            padding-right: 0;
-        }
-        &__main-left {
-            width: 100%;
-            padding-left: 0;
-            padding-right: 0;
-            flex-direction: row;
-            flex-wrap: wrap;
-            margin-bottom: var(--gap);
-            &>a {
-                flex-basis: 100%;
-            }
-        }
-        &__main-left:after {
-            display: none;
-        }
-        &__contact-row {
-            width: 50%;
-        }
-        &__logo {
-            margin-bottom: var(--gap);
-        }
-        &__social-group {
-            justify-content: center;
-            margin-top: var(--gap);
-            .social-link {
-                margin-left: 0px;
-                margin-right: 13px;
-            }
-        }
-    }
-    @include from(769px) {
-        &__link:hover {
-            color: var(--orange);
-        }
-    }
-    @include to(575px) {
-        &__social-group {
-            justify-content: flex-start;
-        }
-        &__main {
-            padding-bottom: calc(var(--gap) * 2.65);
-        }
-    }
-}
-
-.footer-adress {
-    color: var(--gray);
-    font-size: 14px;
-    line-height: 20px;
-    max-width: 174px;
-    .button {
-        margin-top: 12px;
-    }
-}
-
-.underline {
-    text-decoration: underline;
-}
-
-.footer-bottom {
-    padding-top: 9px;
-    padding-bottom: 9px;
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 11px;
-    line-height: 2.18em;
-    background-color: var(--gray);
-    color: var(--very-gray);
-    --self-font-color: var(--very-gray);
-    padding-left: var(--side-fields);
-    padding-right: var(--side-fields);
-    .scroll-to-top {
-        @include shift-right(0);
-        @include shift-left(0);
-        @include size(1);
-        cursor: pointer;
-    }
-    .web-developer-block {
-        display: flex;
-        color: inherit;
-        // align-items: center;
-        @include shift-padding(0);
-        margin-left: auto;
-        color: var(--self-font-color);
-        text-decoration: none;
-    }
-    .all-rights-phrase {
-        @include shift-padding-left(5);
-    }
-    .all-rights-phrase {
-        @include shift-padding-left(5);
-    }
-    @include to(950px) {
-        .all-rights-phrase {
-            @include shift-padding-left(0);
-        }
-    }
-    @include to(575px) {
-        .all-rights-phrase {
-            padding-left: 0;
-            line-height: 1.25em;
-        }
-        .web-developer-block {
-            flex-direction: column;
-            line-height: 1.25em;
-        }
-        .scroll-to-top {
-            width: 30px;
-            margin-left: 0;
-            margin-right: 0;
-        }
-    }
-}
-
-.fixed-footer {
-    --self-color: var(--black);
-    height: 50px;
-    padding-bottom: 14px;
-    position: fixed;
-    width: 100vw;
-    padding-left: var(--side-fields);
-    padding-right: var(--side-fields);
-    z-index: 3;
-    bottom: 0;
-    left: 0;
+    padding: 0 var(--side-fields) var(--side-fields) var(--side-fields);
+    background: #f4f3ec;
     display: flex;
     justify-content: space-between;
-    color: var(--self-color);
-    transition: .3s ease-out;
-    pointer-events: none;
-    &__tel {
-        text-decoration: none;
-        display: flex;
-        align-items: center;
-        font-weight: bold;
-        @include fontSizeLhToEm(18, 24);
-        color: var(--self-color);
-        pointer-events: all;
-    }
-    &__tel-text {
-        color: var(--self-color);
-    }
-    &__scroll {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        pointer-events: all;
-    }
-    &__scroll-icon {
-        fill: var(--self-color);
-        margin-left: 26px;
-    }
-    .scroll-anim {
-        animation-name: scroll;
-        animation-duration: 1.5s;
-        animation-timing-function: cubic-bezier(0.650, -0.550, 0.250, 1.500);
-        animation-iteration-count: infinite;
-        transform-origin: 50% 20.5px;
-        will-change: transform, opacity;
-        opacity: 1;
-    }
-    &__scroll-text {
-        letter-spacing: 0.1em;
-    }
-    &__tel-icon {
-        margin-right: 20px;
-    }
-    @include to(768px) {
-        padding-bottom: 0px;
-    }
-    @include to(575px) {
-        padding-bottom: 0px;
-        &__tel-text {
-            display: none;
-        }
-        &__scroll-icon {
-            width: 7.5px;
-            height: 17px;
-            margin-left: 10px;
-        }
-        &__scroll-text {
-            font-size: 10px;
-        }
+    color: var(--blue);
+    a {
+        color: var(--blue);
     }
 }
