--- a/src/pug/includes/footer.pug
+++ b/src/pug/includes/footer.pug
@@ -1,4 +1,9 @@
-
+.footer
+    .fixed-footer__left © 2020 Подол Плаза
+    .fixed-footer__right 
+        span  Розробка сайту 
+        a(target='_blank' href="https://smarto.agency") Smart Orange
+    
 
 
 
