--- a/src/pug/includes/header.pug
+++ b/src/pug/includes/header.pug
@@ -106,8 +106,8 @@ aside.menu
     +svg('menu-decor').menu__decor.menu__decor-bottom
     .menu__lang-wrap
         .menu__sngl-lang.menu__sngl-lang_active Ук
-        .menu__sngl-lang Ру
-        .menu__sngl-lang En
+        a(href="ru/").menu__sngl-lang Ру
+        a(href="en/").menu__sngl-lang En
     a(href="tel:"+complexTel).menu__tel #{complexTel}
     .menu__form-call.js-form-call 
         .menu__form-call-inner Замовити дзвінок
