--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -117,6 +117,12 @@
             margin-top: auto;
             margin-bottom: auto;
         }
+        @include from(1680px) {
+            min-height: 150vh;
+            &__title {
+                font-size: 48px;
+            }
+        }
         @include to(1200px) {
             --ms-side-padding: 50px;
         }
@@ -135,13 +141,24 @@
                 order: 5;
                 flex-direction: column;
                 margin-bottom: 0;
+                align-self: flex-end;
             }
             &__icons-row>* {
                 margin-right: auto;
-                margin-top: auto;
+                margin-top: 10px;
             }
             .section-info {
                 margin-bottom: 18px;
+            }
+            &:after {
+                content: '';
+                position: absolute;
+                left: 0;
+                top: 0;
+                width: 100%;
+                height: 100%;
+                background-color: rgba(255, 255, 255, 0.35);
+                z-index: 0;
             }
         }
     }
@@ -674,6 +691,11 @@
         border: 1px solid #E8E6DF;
         border-radius: 25px;
         text-align: center;
+        flex-direction: column;
+        align-content: center;
+        &.slick-slide {
+            display: flex;
+        }
         &__title {
             font-family: $default-font2;
             font-size: 36px;
@@ -686,6 +708,9 @@
             margin-top: 30px;
             margin-bottom: 30px;
             object-fit: contain;
+            margin-bottom: auto;
+            margin-top: auto;
+            padding: 15px 0;
         }
         &__subtitle {
             font-family: $default-font2;
@@ -919,6 +944,11 @@
                 width: 30px;
             }
         }
+        @include from(1680px) {
+            &__table-item-title {
+                font-size: 18px;
+            }
+        }
         @include to(1100px) {
             &__table-item {
                 padding: 20px;
@@ -1019,6 +1049,11 @@
             margin-top: 20px;
             max-width: 300px;
         }
+        @include from(1680px) {
+            .icon-with-label.text-l {
+                font-size: 23px;
+            }
+        }
         @include from(576px) {
             &__remark:not(:last-child) {
                 margin-bottom: 80px;
@@ -1040,70 +1075,8 @@
         }
     }
     
-    // .double-part-section {
-    //     display: flex;
-    //     flex-wrap: wrap;
-    //     align-items: center;
-    //     padding-left: var(--side-fields);
-    //     min-height: calc(100vh - var(--header-height));
-    //     .button-std {
-    //         margin-top: 55px;
-    //     }
-    //     .title {
-    //         max-width: 10ch;
-    //     }
-    //     &__text {
-    //         @include size(5);
-    //         @include shift-padding(0.8);
-    //     }
-    //     &__img {
-    //         @include size(7);
-    //         height: calc(100vh - var(--header-height));
-    //         margin-left: auto;
-    //         img {
-    //             height: 100%;
-    //             object-fit: cover;
-    //         }
-    //     }
-    //     &.symmetrical &__img,
-    //     &.symmetrical &__text {
-    //         @include size(6);
-    //     }
-    //     &.reverse {
-    //         padding-left: 0;
-    //         padding-right: var(--side-fields);
-    //     }
-    //     &.reverse &__img {
-    //         margin-left: 0;
-    //         margin-right: auto;
-    //     }
-    //     &.white {
-    //         background-color: var(--white);
-    //     }
-    //     @include to(950px) {
-    //         &__text {
-    //             padding-left: 0;
-    //             padding-right: 0;
-    //         }
-    //     }
-    //     @include to(575px) {
-    //         padding-left: 0;
-    //         min-height: auto;
-    //         &__img,
-    //         &__text {
-    //             width: 100%;
-    //         }
-    //         &__text {
-    //             padding-top: 20px;
-    //             padding-bottom: 20px;
-    //             padding-left: var(--side-fields);
-    //         }
-    //         &__img {
-    //             margin-top: auto;
-    //             height: calc(50vh - var(--header-height));
-    //         }
-    //         .button-std {
-    //             margin-top: 20px;
-    //         }
-    //     }
-    // }
+    .icon--letter-box {
+        width: 15px;
+        fill: #e8e6df;
+        height: 15px;
+    }
