--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -96,6 +96,7 @@
             justify-content: center;
             font-family: $default-font2;
             color: var(--blue);
+            transition: .3s ease-out;
             cursor: pointer;
         }
         &__icons-row {
@@ -159,6 +160,12 @@
                 height: 100%;
                 background-color: rgba(255, 255, 255, 0.35);
                 z-index: 0;
+            }
+        }
+        @include from(769px){
+            &__but:hover{
+    
+                background-color: var(--ffffff);
             }
         }
     }
@@ -229,6 +236,14 @@
         }
         &__text {
             width: 15ch;
+        }
+        &[href]{
+            transition: color .15s ease-out;
+            @include from(769px){
+                &:hover {
+                    color: var(--gold);
+                }
+            }
         }
     }
     
