--- a/src/assets/styles/footer.scss
+++ b/src/assets/styles/footer.scss
@@ -21,6 +21,7 @@
     display: flex;
     justify-content: space-between;
     color: var(--blue);
+    font-size: 14px;
     a {
         color: var(--blue);
     }
