--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -121,6 +121,10 @@
             min-height: 150vh;
             &__title {
                 font-size: 48px;
+                max-width: 18ch;
+            }
+            .icon-with-label__text {
+                font-size: 14px;
             }
         }
         @include to(1200px) {
@@ -130,25 +134,92 @@
             padding-left: var(--side-fields);
             padding-right: var(--side-fields);
             padding-bottom: 20px;
-            align-content: initial;
+            align-content: flex-start;
+            padding-top: 0;
             &__title {
                 font-size: 18px;
+                max-width: 80%;
             }
             &__slider {
                 width: 100%;
             }
-            &__icons-row {
-                order: 5;
-                flex-direction: column;
-                margin-bottom: 0;
-                align-self: flex-end;
+            &__but {
+                width: 180px;
+                height: 36px;
             }
-            &__icons-row>* {
-                margin-right: auto;
-                margin-top: 10px;
+            &__section-info-wrap {
+                width: calc(100% + (var(--side-fields) * 2));
+                margin: 0;
+                display: flex;
+                justify-content: space-between;
+                margin-left: calc(var(--side-fields) * -1);
+                margin-right: calc(var(--side-fields) * -1);
             }
             .section-info {
                 margin-bottom: 18px;
+            }
+            .section-info__top {
+                padding-left: 20px;
+                padding-right: 20px;
+            }
+            .section-info:first-child .section-info__top {
+                border-radius: 0 25px 25px 0;
+            }
+            &__title-wrap {
+                margin-bottom: 40px;
+            }
+            &__icons-row {
+                order: 0;
+                // flex-direction: column;
+                justify-content: flex-end;
+                margin-bottom: 0;
+                align-self: flex-end;
+                z-index: 2 !important;
+                margin-bottom: 20px;
+            }
+            &__icons-row>* {
+                margin-right: 0;
+                margin-top: 10px;
+            }
+            .icon-with-label {
+                position: relative;
+            }
+            .icon-with-label__text {
+                position: absolute;
+                right: 0;
+                opacity: 0;
+                z-index: 10;
+                pointer-events: none;
+                top: calc(100% + 6px);
+                background-color: #ffffff;
+                transition: .3s ease-out;
+                padding: 10px 15px;
+                border-radius: 25px 0px 25px 25px;
+                font-size: 10px;
+                width: 150px;
+                // display: none;
+            }
+            .icon-with-label__text:after {
+                content: '';
+                display: inline-block;
+                position: absolute;
+                right: 0;
+                top: 0;
+                transform: translateY(-100%);
+                background-image: url("data:image/svg+xml,%3Csvg width='6' height='6' viewBox='0 0 6 6' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath d='M6 0L0 6H6V0Z' fill='white'/%3E%3C/svg%3E%0A");
+                background-repeat: no-repeat;
+                width: 6px;
+                height: 6px;
+            }
+            .icon-with-label:hover .icon-with-label__text {
+                opacity: 1;
+                pointer-events: all;
+            }
+            .icon-with-label__icon {
+                width: 30px;
+                height: 30px;
+                margin-right: 0;
+                margin-left: 20px;
             }
             &:after {
                 content: '';
@@ -204,7 +275,8 @@
         }
         @include to(575px) {
             &__price {
-                font-size: 18px;
+                font-size: 24px;
+                padding: 0 10px;
             }
             &__top {
                 padding-right: 45px;
@@ -249,7 +321,7 @@
     
     .about-block {
         padding-top: 100px;
-        padding-bottom: 59px;
+        padding-bottom: 0px;
         padding-left: var(--side-fields);
         padding-right: var(--side-fields);
         display: flex;
@@ -290,6 +362,9 @@
             left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
+            .gold {
+                font-weight: bold;
+            }
         }
         @include to(575px) {
             padding-top: 50px;
@@ -305,6 +380,14 @@
                 width: 80%;
                 padding-bottom: 80%;
                 margin: 30px auto;
+            }
+        }
+        @include from(1320px) {
+            &__golden-circle {
+                width: 320px;
+                padding-bottom: 320px;
+                margin-left: auto;
+                margin-right: auto;
             }
         }
     }
@@ -327,6 +410,7 @@
         .button-std {
             margin-top: 30px;
             width: 50%;
+            max-width: 400px;
         }
         .panorama-marker {
             cursor: pointer;
@@ -339,13 +423,25 @@
             margin-top: calc((200px + 100px) * -1);
             margin-left: calc(var(--side-fields) * -1);
             margin-right: calc(var(--side-fields) * -1);
-            margin-bottom: -6px;
+            margin-bottom: -10px;
+        }
+        @include from(1680px) {
+            padding-top: 140px;
+            .panorama-map {
+                margin-top: calc((200px + 140px) * -1);
+            }
+            .subtitle {
+                padding-right: 10%;
+            }
         }
         @include to(950px) {
             padding-top: 50px;
             &__text-content {
                 pointer-events: none;
                 height: 300px;
+                .subtitle {
+                    max-width: 72%;
+                }
                 .title {
                     float: none;
                     width: 100%;
@@ -363,6 +459,9 @@
             background-color: #f4f7fc;
             &__text-content {
                 height: auto;
+                .subtitle {
+                    max-width: none;
+                }
                 .button-std {
                     width: 100%;
                 }
@@ -400,12 +499,15 @@
             object-fit: cover;
         }
         &__content {
-            padding-top: var(--side-fields);
+            padding-top: calc(var(--side-fields) * 1.25);
             padding-bottom: var(--side-fields);
             position: relative;
             display: flex;
             flex-wrap: wrap;
             z-index: 1;
+        }
+        .subtitle {
+            color: var(--blue);
         }
         &__column-left {
             width: 50%;
@@ -418,6 +520,19 @@
             .text {
                 margin-bottom: 5em;
                 color: var(--blue);
+            }
+        }
+        @include from-to(576px,
+        768px) {
+            min-height: 100vh;
+            &__content {
+                padding-top: 40px;
+            }
+            .title {
+                line-height: 1.25em;
+            }
+            &__bg {
+                height: 100vh;
             }
         }
         @include to(575px) {
@@ -457,7 +572,8 @@
         transition: .3s ease-out;
         position: fixed;
         opacity: 0;
-        @include fontSizeLhToEm(10, 10);
+        @include fontSizeLhToEm(10,
+        10);
         pointer-events: none;
         &:after {
             content: '';
@@ -495,8 +611,8 @@
         }
         &__text {
             position: relative;
-            @include shift-padding-left(1);
-            @include shift-padding-right(0.8);
+            @include shift-padding-left(0.5);
+            @include shift-padding-right(0.5);
             justify-content: center;
             height: 100vh;
             align-items: center;
@@ -519,8 +635,14 @@
             }
         }
         .adv-sngl {
-            margin-top: 50px;
+            margin-top: 30px;
             max-width: 80%;
+        }
+        @media screen and (max-height:700px) and (min-width:1025px) {
+            .adv-sngl {
+                margin-top: 10px;
+                max-width: 80%;
+            }
         }
         @include to(950px) {
             &__text {
@@ -556,7 +678,7 @@
     
     .adv-sngl {
         &__text {
-            margin-top: 20px;
+            margin-top: 10px;
         }
     }
     
@@ -589,17 +711,29 @@
             height: 100%;
             object-fit: cover;
         }
+        @include from(1680px) {
+            &__text {
+                font-size: 16px;
+            }
+            .subtitle {
+                font-size: 24px;
+            }
+        }
         @include to(950px) {
             &__text {
                 width: 65%;
-                padding-top: var(--side-fields);
-                padding-bottom: var(--side-fields);
+                padding-top: calc(var(--side-fields) * 2);
+                padding-bottom: calc(var(--side-fields) * 2);
+                padding-left: calc(var(--side-fields) * 2);
+                padding-right: calc(var(--side-fields) * 2);
             }
         }
         @include to(575px) {
             &__text {
                 width: 100%;
                 padding: 30px var(--side-fields);
+                bottom: auto;
+                top: 0;
             }
         }
     }
@@ -625,7 +759,7 @@
             line-height: 1.3em;
             width: auto;
             letter-spacing: 0.06em;
-            color: var(--blue-light);
+            color: var(--blue);
         }
         .plans__slider {
             width: 100%;
@@ -698,7 +832,7 @@
         }
         &__title {
             font-family: $default-font2;
-            font-size: 36px;
+            font-size: 28px;
             line-height: 1em;
             color: var(--blue);
             margin-bottom: 10px;
@@ -817,7 +951,7 @@
             height: 100%;
             object-fit: cover;
             z-index: 1;
-            background: linear-gradient(180deg, rgba(244, 243, 236, 1) 0%, rgba(9, 9, 121, 0) 50%);
+            background: linear-gradient(180deg, rgba(244, 243, 236, 1) 0%, rgba(244, 243, 236, 0) 50%);
         }
         &__decor {
             margin-bottom: 60px;
@@ -837,6 +971,11 @@
             width: 50%;
             padding-right: 25%;
             padding-left: 0;
+        }
+        @include from(1680px) {
+            .subtitle {
+                padding-right: 15%;
+            }
         }
         @include to(950px) {
             &__title {
@@ -935,11 +1074,15 @@
         &__table-item img {
             width: calc(50% - 60px);
             object-fit: contain;
+            max-height: 110px;
         }
         &__table-item-point {
             display: flex;
             align-items: center;
             margin-bottom: 15px;
+            &-text {
+                margin-left: 7px;
+            }
             &-icon {
                 width: 30px;
             }
@@ -961,6 +1104,7 @@
             }
         }
         @include to(950px) {
+            padding: calc(var(--side-fields) * 3) var(--side-fields);
             &__table-item {
                 flex-wrap: wrap-reverse;
                 padding: 25px 20px;
@@ -972,7 +1116,7 @@
             }
             &__table-item-text-wrap {
                 width: 100%;
-                text-align: center;
+                text-align: left;
             }
         }
         @include from(769px) {
@@ -1028,7 +1172,7 @@
             margin-top: 20px;
         }
         .icon-with-label {
-            margin-top: 20px;
+            margin-top: 30px;
         }
         .icon-with-label__text {
             width: 20ch;
@@ -1053,10 +1197,18 @@
             .icon-with-label.text-l {
                 font-size: 23px;
             }
+            .button-std {
+                max-width: 330px;
+            }
         }
         @include from(576px) {
             &__remark:not(:last-child) {
                 margin-bottom: 80px;
+            }
+        }
+        @include to(768px) {
+            .icon-with-label__text {
+                width: 18ch;
             }
         }
         @include to(575px) {
