--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -108,6 +108,11 @@
         &__section-info-wrap {
             margin-left: auto;
             margin-right: calc( var(--ms-side-padding) * -1);
+            display: flex;
+            width: 100%;
+            margin-left: 0;
+            flex-wrap: wrap;
+            padding-top: 25px;
         }
         .section-info {
             margin-bottom: 28px;
@@ -125,6 +130,23 @@
             }
             .icon-with-label__text {
                 font-size: 14px;
+            }
+        }
+        @include from(576px) {
+            &__section-info-wrap>* {
+                width: 50%;
+            }
+            .section-info:nth-child(odd) .section-info__top {
+                border-radius: 0 25px 25px 0;
+            }
+            .section-info:nth-child(odd) {
+                margin-left: calc(var(--ms-side-padding) * -1);
+                padding-right: calc(50% - 25ch);
+            }
+            .section-info:nth-child(even) {
+                margin-right: calc(var(--ms-side-padding) * -1);
+                margin-left: auto;
+                padding-left: calc(50% - 25ch);
             }
         }
         @include to(1200px) {
@@ -151,18 +173,20 @@
                 width: calc(100% + (var(--side-fields) * 2));
                 margin: 0;
                 display: flex;
+                flex-wrap: wrap;
                 justify-content: space-between;
                 margin-left: calc(var(--side-fields) * -1);
                 margin-right: calc(var(--side-fields) * -1);
             }
             .section-info {
                 margin-bottom: 18px;
+                width: calc(50% - 5px);
             }
             .section-info__top {
                 padding-left: 20px;
                 padding-right: 20px;
             }
-            .section-info:first-child .section-info__top {
+            .section-info:nth-child(odd) .section-info__top {
                 border-radius: 0 25px 25px 0;
             }
             &__title-wrap {
@@ -644,6 +668,24 @@
                 max-width: 80%;
             }
         }
+        @include from-to(576px,
+        768px) {
+            flex-wrap: wrap;
+            &__img,
+            &__text {
+                height: 50vh;
+                width: 100%;
+            }
+            &__text {
+                order: 1;
+            }
+            &__img {
+                order: 2;
+            }
+            .adv-sngl {
+                margin-top: 15px;
+            }
+        }
         @include to(950px) {
             &__text {
                 @include shift-padding-left(0.5);
@@ -777,6 +819,10 @@
             overflow: visible;
         }
         &__prev {}
+        @include to(768px) {
+            padding-top: 50px;
+            padding-bottom: 50px;
+        }
         @include to(575px) {
             position: relative;
             padding-top: 30px;
@@ -1070,6 +1116,7 @@
         &__table-item-text-wrap {
             width: 50%;
             margin-left: auto;
+            margin: 15px auto;
         }
         &__table-item img {
             width: calc(50% - 60px);
