--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -43,6 +43,12 @@ block content
 					.section-info__price 
 						span >
 						span #{val[1]}
+		.main-screen__scroll-alert
+			<svg width="26" height="44" viewBox="0 0 26 44" fill="none" xmlns="http://www.w3.org/2000/svg">
+				<rect x="1" y="1" width="24" height="42" rx="12" stroke="#CFBE97" stroke-width="2"/>
+				<circle class="scroll-ms" cx="13" cy="15" r="2" fill="#E1DDD2"/>
+				</svg>
+			.main-screen__scroll-alert-text гортайте нижче
 			//- .section-info 
 			//- 	.section-info__top
 			//- 		span 2 к - Квартира 
