--- a/src/assets/styles/assets/base.scss
+++ b/src/assets/styles/assets/base.scss
@@ -69,6 +69,11 @@ button {
     font-family: $default-font;
 }
 
+sup {
+    position: relative;
+    bottom: 0.5em;
+}
+
 ::-webkit-scrollbar {
     width: 8px;
 }
