--- a/src/assets/styles/index.scss
+++ b/src/assets/styles/index.scss
@@ -86,6 +86,7 @@
         &__title {
             max-width: 25ch;
             font-size: 36px;
+            padding-right: 20px;
             line-height: 1.3em;
             font-family: $default-font2;
             color: var(--ffffff);
@@ -1000,6 +1001,23 @@
         .text {
             align-self: flex-start;
             padding-right: 15%;
+        }
+        @include from(951px) {
+            .title {
+                margin-bottom: 30px;
+            }
+            .golden-circle {
+                order: 1;
+                margin-left: 0;
+                margin-right: auto;
+            }
+            .text {
+                order: 3;
+            }
+            .subtitle {
+                align-self: flex-start;
+                order: 2;
+            }
         }
         @include to(950px) {
             .title {
