--- a/src/pug/pages/index.pug
+++ b/src/pug/pages/index.pug
@@ -25,7 +25,7 @@ block content
 			a(target='_blank' href="https://maps.google.com/?q="+complexAdress).icon-with-label
 				.icon-with-label__icon
 					+svg('marker')
-				.icon-with-label__text м. Київ, Глибочицька 73
+				.icon-with-label__text #{complexAdress}
 			.icon-with-label
 				.icon-with-label__icon
 					+svg('clock')
@@ -436,7 +436,7 @@ block content
 					<svg width="12" height="13" viewBox="0 0 12 13" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<path d="M6 0.664062C2.68 0.664062 0 3.34406 0 6.66406C0 9.98406 2.68 12.6641 6 12.6641C9.32 12.6641 12 9.98406 12 6.66406C12 3.34406 9.32 0.664062 6 0.664062ZM8.28 8.98406C8.2 9.06406 8.09333 9.10406 8 9.10406C7.90667 9.10406 7.8 9.06406 7.72 8.98406L5.56 6.82406V3.30406C5.56 3.0774 5.73333 2.90406 5.96 2.90406C6.18667 2.90406 6.36 3.0774 6.36 3.30406V6.49073L8.28 8.41073C8.44 8.58406 8.44 8.8374 8.28 8.98406Z" fill="#E8E6DF"/>
 						</svg>
-				.icon-with-label__text пн-пт: 09:00-19:00 сб-вс: 10:00-17:00
+				.icon-with-label__text пн-пт: 09:00-18:00 сб-вс: 10:00-18:00
 			.contacts__remark * Працюємо без вихідних та перерв на обід
 		.contacts__right
 			.contacts__subtitle  Залишилися запитання?
