--- a/src/pug/layout/main.pug
+++ b/src/pug/layout/main.pug
@@ -4,7 +4,7 @@ block variable
 - 
 
 	var complexTel = '044-338-27-27';
-	var complexAdress = ' Київ, вул.Глибочицька 73';
+	var complexAdress = ' Київ, вул.Глибочицька 77-79';
 	var email = 'podilplaza@ukr.net';
 doctype html
 html(lang="uk")
